# xlgyrod

./: .gitignore  CMakeLists.txt  README.md  env.sh  main.c  makefile  xlgyro_data_processor.c  xlgyro_data_processor.h  xlgyro_options.c  xlgyro_options.h  xlgyro_reader.c  xlgyro_reader.h  xlgyro_server.c  xlgyro_server.h  xlgyroserver.c  xlgyroserver.h
