cmake_minimum_required(VERSION 3.0)
project(xlgyrod)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0 -std=gnu99 -lpthread -Wall")
file(GLOB LOCAL_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
file(GLOB LOCAL_HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(${PROJECT_NAME} ${LOCAL_SRCS} ${LOCAL_HDRS})
target_link_libraries(${PROJECT_NAME} Threads::Threads)
